# mfg-lab

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  requirements-dev.txt  vercel.json
.github/workflows/: verify.yml
enclosure/: LICENSE.md  mfg-congest.html  wardrop-repro.html
eqcert/: Makefile  README.md  index.js
eqcert/src/: certificate.js  interval.js  radii.js  rational.js  sequence.js
eqcert/tests/: test-eqcert.js  test-single-source.js
mfg-cap/: Makefile  README.md  mfg-cap.html
mfg-cap/docs/: FINDINGS_LIT_CAP.md
mfg-cap/kernel/: interval.js  mfg1d.js  validate.js
mfg-cap/tests/: test-artifact.js  test-cap.js
mfg-cap/tools/: artifact-template.html  build-artifact.js  report.js
mfg-lab/: byo.html  index.html  lab.html  mfg-lab.html  onepager.html
mfg-lab/docs/: FINDINGS.md  FINDINGS_LIT.md
mfg-lab/lab/: contract.js  failure-map.js  mfg-byo.js  order-study.js
mfg-lab/mfglab/: README.md  pyproject.toml
mfg-lab/mfglab/src/mfglab/: __init__.py  certificate.py
mfg-lab/mfglab/src/mfglab/lab/: failure_map.py
mfg-lab/mfglab/tests/: test_continuum.py  test_crosslang_continuum.py  test_lab.py  test_wardrop.py
mfg-lab/mfglab/tools/: lab_reference.js
mfg-lab/python/src/mfglab/: continuum.py  wardrop.py
mfg-lab/python/src/mfglab/lab/: __init__.py  contract.py  failure_map.py  fixtures.py  order_study.py
mfg-lab/python/tests/: test_crosslang.py  test_crosslang_lab.py
mfg-lab/python/tools/: js_reference.js
mfg-lab/tests/: lab-fixtures.js  smoke.js  test-byo-artifact.js  test-byo.js  test-failure-map.js  test-index.js  test-invariant.js  test-lab-artifact.js  test-layout.py  test-order-study.js  test-transpose.js  test-wardrop-diff.js  test-wardrop-interval.js  test-wardrop.js  test-water-value-diff.js
mfg-lab/tools/: build-byo.js  build-lab.js  byo-template.html  lab-template.html
sin-mfg/: sin-mfg.html
sin-mfg/docs/: FINDINGS_SIN.md  OPEN_PROBLEMS.md  SIN_MFG_Model_Spec_v0.1.md  SIN_MFG_Model_Spec_v0.2.md  SIN_MFG_Model_Spec_v0.3.md  pld-data-run.md
sin-mfg/tests/: pld_martingale_test.py  pld_multiyear.py  pld_regime_test.py  test-layout-sin.py  test-sin.js  test-transpose-sin.js  test-water-value.js
sin-mfg/tools/: continuum_reference.js  sin_reference.js  water_value_lp.js  water_value_tree.js
